reserve one line of space to stop the icons from jumping

--- a/htdocs/css/openwebrx.css
+++ b/htdocs/css/openwebrx.css
@@ -931,6 +931,7 @@ img.openwebrx-mirror-img
 
 .openwebrx-meta-slot > * {
     flex: 0;
+    flex-basis: 1.125em;
 }
 
 .openwebrx-meta-slot, .openwebrx-meta-slot.muted:before {
